# aws-bedrock-document-chat

./: .env.example  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: cd.yml  ci.yml
client/: app.js  index.html  styles.css
infra/terraform/: README.md  backend.tf.example  bedrock.tf  lambda_sync.py  lambda_sync.tf  locals.tf  outputs.tf  package_lambda.sh  provider.tf  s3.tf  setup-backend.sh  terraform.tfvars.example  variables.tf
server/: Dockerfile  bedrock_agent_client.py  bedrock_client.py  main.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_bedrock_agent_client.py  test_bedrock_client.py
